# 4wd_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
assets/: demo.webm
config/: nav2_params.yaml
launch/: bringup.launch.py  localization.launch.py  navigation.launch.py  robot_state_publisher.launch.py  sim.launch.py
maps/: obstacle_map.pgm  obstacle_map.yaml
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: gazebo_bridge.yaml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml  navigation.launch.xml
my_robot_bringup/rviz/: navigation.rviz
my_robot_bringup/worlds/: emptyh.sdf  my_custom.pgm  my_custom.yaml  warehouse2.sdf
my_robot_description/urdf/: imu.urdf.xacro  lidar.urdf.xacro  lidar2.urdf.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
urdf/: gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
worlds/: obstacles.world
